tests/parsing/smtlib/v2.7/errors/067_declare-fun_bad_arg_sort_1.smt2
(set-logic ALL)
(declare-fun foo (_) bar)
